apps/media/audiobookshelf/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: audiobookshelf
  namespace: media
  labels:
    app: audiobookshelf
spec:
  serviceName: audiobookshelf
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1029
        runAsGroup: 65537
        fsGroup: 65537
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:2.36.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 13378
              name: http
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media-storage
              mountPath: /media
            - name: media-storage
              mountPath: /metadata
              subPath: Audiobooks/metadata
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
            limits:
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
          startupProbe:
            httpGet:
              path: /healthcheck
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 10
            failureThreshold: 36
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: http
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: http
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-storage
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: linstor-r3
        resources:
          requests:
            storage: 2Gi
