apps/media/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: media
  labels:
    app: audiobookshelf
spec:
  type: ClusterIP
  ports:
    - port: 13378
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: audiobookshelf
